--- a/ExamenParcial03/Views/Jobs/Edit.cshtml
+++ b/ExamenParcial03/Views/Jobs/Edit.cshtml
@@ -20,7 +20,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Difficulty" class="control-label"></label>
-                <input asp-for="Difficulty" class="form-control" />
+                <select asp-for="Difficulty" class="form-control" asp-items="Html.GetEnumSelectList<Difficulty>()"></select>
                 <span asp-validation-for="Difficulty" class="text-danger"></span>
             </div>
             <div class="form-group">
