--- a/ExamenParcial03/Views/Regions/Create.cshtml
+++ b/ExamenParcial03/Views/Regions/Create.cshtml
@@ -19,9 +19,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="RegionName" class="control-label"></label>
-                <select asp-for="RegionName" class="form-control" asp-items="Html.GetEnumSelectList<RegionName>()">
-                    <option value="">--Select Region Name--</option>
-                </select>
+                <input asp-for="RegionName" class="form-control" />
                 <span asp-validation-for="RegionName" class="text-danger"></span>
             </div>
             <div class="form-group">
