--- a/ExamenParcial03/Views/Regions/Edit.cshtml
+++ b/ExamenParcial03/Views/Regions/Edit.cshtml
@@ -15,7 +15,7 @@
             <input type="hidden" asp-for="RegionID" />
             <div class="form-group">
                 <label asp-for="RegionName" class="control-label"></label>
-                <select asp-for="RegionName" class="form-control" asp-items="Html.GetEnumSelectList<RegionName>()"></select>
+                <input asp-for="RegionName" class="form-control" />
                 <span asp-validation-for="RegionName" class="text-danger"></span>
             </div>
             <div class="form-group">
